# AutoPR

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/scripts/: pr_review_runner.py
.github/workflows/: pr-ai.yml
demo/: README.md  pr_comment_preview.md  pr_review.json  run_demo.py
demo/demo-repo-ready/: README.md
demo/prs/: commits.txt  pr.diff
demo/sample-project/tests/: test_sample.py
docs/: ANALYSIS.md  CI_VALIDATION.md  PRD.md  PROVIDERS.md
src/autopr/: __init__.py  analysis.py  ci_parser.py  cli.py  coverage_utils.py  generator.py  issue_validator.py  lint.py  llm.py  main.py  parser.py  prompts.py  providers.py  reviewer.py  validators.py
src/autopr.egg-info/: SOURCES.txt
tests/: test_analysis.py  test_api.py  test_ci_parser.py  test_cli.py  test_coverage_utils.py  test_generator.py  test_issue_validator.py  test_llm_selection.py  test_parser.py  test_providers.py  test_validators.py
