[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopr"
version = "0.1.0"
description = "Minimal MVP for AutoPR - AI-powered PR generator and reviewer"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
pr-ai = "autopr.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
